# amplifier

./: .gitignore  Cargo.toml  README.md  amplifier.json  vscodessh  vscodessh.pub
src/: data.rs  lib.rs  main.rs  web.rs
static/: amplifier copy.json  amplifier.css  amplifier.json  amplifier3.js  amplifier3.js.bak  amplifier3.js.bak.1769429598  amplifier3.js.bak2  amplifier_old.css  jerry.json  skin.css  test.json  test123.json  ui-polish.css
templates/: amplifier2.html  amplifier2.html.bak.1769429561  config2.html  config2_old.html  test_sse.html  voltage.html
